2012-12-16  Per Bothner  <per@bothner.com>

	* IgnoreTarget.java (compileFromStack): Do nothing if
	not reachableHere().

2012-12-10  Per Bothner  <per@bothner.com>

	* Language.java (detect): Fix possible IndexOutOfBoundsException.

2012-11-18  Per Bothner  <per@bothner.com>

	* Language.java (declFromField): Unless the type is a ModuleMethod
	don't extract symbol from value, since that may fail for aliases.

	* ClassExp.java (compileMembers): Skip generating code for class
	initializer if module class.
	* ClassInitializer.java (emit):  Instead emit inline body here,
	along with other module-level static initialization.

2012-11-11  Per Bothner  <per@bothner.com>

	* LitTable.java (emit): Special-case optimization for SimpleSymbol.

2012-11-06  Per Bothner  <per@bothner.com>

	* ModuleExp.java (superType, interfaces): Remove fields.  Use
	respective properties from compileType field instead.
	(getSuperType, setSuperType, getInterfaces, setInterfaces):
	Update accordingly.
	* Compilation.java (generateBytecode): Partially revert previous change.
	(generateConstructor): Don't register module instance if
	USE_DEFINED_CLASS.

	* Language.java (parse): Call ModuleExp.classFor after parsing.
	* Compilation.java (process): Call ModuleExp.classFor after parsing.

2012-11-05  Per Bothner  <per@bothner.com>

	* Compilation.java (generateBytecode): If USE_DEFINED_CLASS is set,
	then we shouldn't use the mainClass as the moduleClass.
	(makeRunnable): Not if USE_DEFINED_CLASS is set.
	(addMainClass): Don't set super to ModuleBody if USE_DEFINED_CLASS.

2012-11-02  Per Bothner  <per@bothner.com>

	* Compilation.java (process): Defer addMainClass to after resolve If .

2012-10-20  Charles Turner <chturne@gmail.com>
	    Per Bothner  <per@bothner.com>

	Re-factor type lookup to avoid Scheme dependencies.
	* Language.java (getNamedType): New method.
	(string2Type): Remove - merge into getTypeFor(String).

2012-10-07  Per Bothner  <per@bothner.com>
