@@ -61,7 +61,8 @@ public class InlineCalls extends ExpExpVisitor<Type> {
         Type expType = exp.getType();
         if (expType == Type.toStringType)
             expType = Type.javalangStringType;
-        int cmp = required == null ? 1 : required.compare(expType);
+        int cmp = required == null || expType == Type.neverReturnsType ? 1
+            : required.compare(expType);
         boolean incompatible = cmp == -3;
         if (incompatible
             || (cmp == -2 && required.isInterface()
